- fixed horizontal overflow, broke y overflow

--- a/css/chat.css
+++ b/css/chat.css
@@ -13,6 +13,7 @@
 }
 
 #chat_content_area{
+    min-width: 0;
     min-height: 0;
     flex-grow: 1;
 }
@@ -20,17 +21,19 @@
 #chat_content{
     flex-grow: 1;
     min-height: 0;
+    min-width: 0;
 }
 
 #chat-area{
+    min-width: 0;
     background-color: #5d5d5d;
     flex-grow: 1;
 }
 
 #messages-container{
     min-height: 0;
-    overflow-y: auto;
     overflow-x: hidden;
+    overflow-y: auto;
     flex-grow: 1;
 }
 
@@ -80,13 +83,9 @@
     bottom: 4em;
 }
 
-#messages-container{
-
-}
-
 .message-container-item{
-    margin-left: 1em;
-    margin-top: 1em;
+    margin: 1em;
+    overflow-x: hidden;
 }
 
 .message-item-profile{
@@ -101,13 +100,15 @@
 }
 
 .message-content-header{
+    margin-bottom: .3em;
     align-items: baseline;
     font-size: 1em;
 }
 
 .message-text{
     font-size: .8em;
-
+    overflow-x: hidden;
+    overflow-wrap: anywhere;
 }
 
 
