--- a/css/guildlist.css
+++ b/css/guildlist.css
@@ -13,6 +13,7 @@
     flex-grow: 1;
     border-radius: 1em;
     min-height: 0;
+    min-width: 0;
 }
 
 
